<resources>
    <string name="app_name">SpeechToText</string>
    <string name="speech_translation">Speech Translation</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="start_speaking">Start speaking</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
</resources>